<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTripActivity"
    android:padding="16dp">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEditTrip"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/toolbar"
        android:title="Editar Viaje"
        android:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- EditText para el Nombre del Viaje -->
    <TextView
        android:id="@+id/tvNombreViajeLabelEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trip_name"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/toolbarEditTrip"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etNombreViajeEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/error_empty_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/tvNombreViajeLabelEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        />

    <!-- EditText para el Destino -->
    <TextView
        android:id="@+id/tvDestinoLabelEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etNombreViajeEdit"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/etDestinoEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/error_empty_destination"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/tvDestinoLabelEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        />

    <!-- Botones para Seleccionar Fechas -->
    <Button
        android:id="@+id/btnSeleccionarFechaInicioEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        app:layout_constraintTop_toBottomOf="@id/etDestinoEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        />

    <Button
        android:id="@+id/btnSeleccionarFechaFinEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        app:layout_constraintTop_toBottomOf="@id/btnSeleccionarFechaInicioEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        />

    <!-- TextViews para Mostrar las Fechas Seleccionadas -->
    <TextView
        android:id="@+id/tvFechaInicioSeleccionadaEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btnSeleccionarFechaFinEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/tvFechaFinSeleccionadaEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvFechaInicioSeleccionadaEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        />

    <!-- Switch para Notificaciones -->
    <TextView
        android:id="@+id/tvNotificacionesLabelEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvFechaFinSeleccionadaEdit"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Switch
        android:id="@+id/switchNotificacionesEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        app:layout_constraintTop_toBottomOf="@id/tvNotificacionesLabelEdit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- ImageView para la Imagen del Viaje -->
    <ImageView
        android:id="@+id/ivImagenViajeEdit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_travel"
        android:contentDescription="@string/select_image"
        android:scaleType="centerCrop"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/switchNotificacionesEdit"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- Botón para Seleccionar Imagen -->
    <Button
        android:id="@+id/btnSeleccionarImagenEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintTop_toTopOf="@id/ivImagenViajeEdit"
        app:layout_constraintStart_toEndOf="@id/ivImagenViajeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <!-- Botón para Guardar los Cambios -->
    <Button
        android:id="@+id/btnGuardarCambiosEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_trip"
        app:layout_constraintTop_toBottomOf="@id/ivImagenViajeEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
